# sina_simulation

./: README.md
gazebo_robot/: CMakeLists.txt  gazebo_robot_controllers_plugin.xml  package.xml
gazebo_robot/config/: controller.yaml
gazebo_robot/launch/: lwa4p.launch  lwa4p_gazebo.launch
gazebo_robot/src/: analytic_jacobian.py  formatter.py  position_controller_cartesian_velocity.cpp  velocity_controller_cartesian_pose.cpp  velocity_controller_cartesian_velocity.cpp
moveit_config_6DoF_arm/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_6DoF_arm/config/: controller.yaml  joint_limits.yaml  ros_controllers.yaml  simple_arm.srdf
moveit_config_6DoF_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  (+13 more)
sina_description/: CMakeLists.txt  package.xml  sina.urdf.xacro
sina_description/config/: arm_controller.yaml  arm_driver.yaml  can.yaml
sina_description/meshes/: sick_microscan.stl
sina_description/meshes/gripper/: distal.stl  distal_ursprung.stl  handflaeche.stl  handflaeche_ursprung.stl  proximal.stl  proximal_ursprung.stl
sina_description/xacros/: mpo_700_body.xacro  mpo_700_gazebo.xacro  mpo_700_materials.xacro  sick_microscan_laser.xacro
sina_description/xacros/gripper/: fixed_sina_gripper.urdf.xacro  sina_gripper.urdf.xacro  sina_tns.xacro  sina_xacro.xacro
sina_description/xacros/lwa4p/: common.xacro  lwa4p.transmission.xacro  lwa4p.urdf.xacro  robot.urdf.xacro
sina_simulation/sina_simulation/: CMakeLists.txt  package.xml
(+3 files in other folders)
