<?xml version="1.0"?>
<package format="2">
  <name>sina_description</name>
  <version>0.0.1</version>
  <description> URDF description of the sina robot and the corresponding meshes.</description>
  <maintainer email="matthias@todo.todo">matthias</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
