<?xml version="1.0"?>
<package format="2">
  <name>sina_simulation</name>
  <version>0.0.0</version>
  <description>Simulation for Project SINA to test robot controllers.</description>

  <maintainer email="gergely.soti@kit.edu">Gergely Soti</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_robot</exec_depend>
  <exec_depend>sina_description</exec_depend>

  <export>
    <metapackage/>

  </export>
</package>

